# kanari-sdk

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build_ubuntu.sh  clippy.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  deploy_book.yml  run_node_devnet.yml  runnode.yml  rust.yml
.github_demo/workflows/: rust.yml
api/: Cargo.toml
chain/: Cargo.toml
consensus/core/: Cargo.toml
consensus/core/src/: lib.rs
consensus/pos/: Cargo.toml
consensus/pos/src/: lib.rs  test.rs
consensus/pow/: Cargo.toml
consensus/pow/src/: lib.rs  powtest.rs  test.rs
crates/bytecode-interpreter-crypto/src/: lib.rs
crates/command/: Cargo.toml
crates/command/src/: lib.rs
crates/command/src/keytool_cli/: mod.rs
crates/command/src/move_cli/: mod.rs
crates/command/src/public_cli/: mod.rs
crates/core/k1/: Cargo.toml
crates/core/k2/: Cargo.toml  README.md
crates/core/k2/src/: lib.rs
crates/core/k2/src/block/: mod.rs
crates/core/k2/src/blockchain/: mod.rs  storage.rs
crates/core/k2/src/chain_id/: mod.rs
crates/core/k2/src/config/: mod.rs
crates/core/k2/src/gas/: mod.rs
crates/core/k2/src/simulation/: mod.rs
crates/core/k2/src/transaction/: mod.rs
crates/core/network/: Cargo.toml
crates/core/network/src/: lib.rs
crates/core/p2p/: Cargo.toml
crates/core/p2p/src/: lib.rs
crates/core/wallet/key/: Cargo.toml
crates/core/wallet/key/src/: lib.rs
crates/kanari-framework/: Cargo.toml
crates/kari/: Cargo.toml
crates/kari-evm/: Cargo.toml
crates/kari-evm/src/: lib.rs
crates/kari-move/: Cargo.toml
crates/kari-move-analyzer/: Cargo.toml
crates/kari-move-analyzer/editors/code/: README.md  package-lock.json  package.json
crates/kari-move-analyzer/editors/code/src/: configuration.ts  context.ts  extension.ts  log.ts  main.ts
crates/kari-move-analyzer/editors/code/tests/: ext.test.ts  index.ts  lsp.test.ts  runTests.ts
crates/kari-move-analyzer/editors/code/tests/lsp-demo/: lsp-demo-win.code-workspace  lsp-demo.code-workspace
crates/kari-move-analyzer/src/: completion.rs  diagnostics.rs  symbols.rs  vfs.rs
crates/kari-move/src/: lib.rs  main.rs
crates/kari-move/src/base/: build.rs  call.rs  mod.rs  new.rs  publish.rs
crates/kari-move/tests/: build_testsuite.rs  cli_tests.rs  move_unit_tests_move_vm_and_stackless_vm.rs  sandbox_testsuite.rs
crates/kari-node/: Cargo.toml
crates/kari-node/src/: lib.rs  main.rs
crates/kari/src/: api.rs  block.rs  blockchain.rs  blockchain_simulation.rs  config.rs  keytool.rs  main.rs  move.rs  movekari.rs  rpc.rs  wallet.rs
crates/move-stackless-bytecode-interpreter/src/: lib.rs
crates/move-stdlib-natives/src/: hash.rs
crates/network/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: lib.rs
crates/simulation/: Cargo.toml
crates/storage/src/: config.rs
crates/wallet/key/: Cargo.toml
documentation/book/: book.toml  netlify.toml
documentation/book/src/: SUMMARY.md  abilities.md  abort-and-assert.md  creating-coins.md  friends.md  global-storage-operators.md  global-storage-structure.md  introduction.md  kari.md  loops.md  modules-and-scripts.md  signer.md  structs-and-resources.md  tuples.md  uses.md  variables.md  vector.md
documentation/whitepaper/: book.toml  netlify.toml
example_move/: README.md
example_move/karione/: Move.toml
example_move/nft/: Move.toml
example_move/nft/sources/: nft.move
example_move/token/: .gitignore  Move.toml
external-crates/: tests.sh
external-crates/move/: .gitignore
framework/: Cargo.toml  README.md
framework/kanari-framework/: Move.toml
framework/kanari-framework/doc/: bag.md  bcs.md  bls12381.md  display.md  ecvrf.md  ed25519.md  groth16.md  math.md  object_bag.md  package.md  pay.md
framework/kanari-framework/doc/dependencies/move-stdlib/: type_name.md
framework/kanari-framework/sources/: address.move  bag.move  deny_list.move  display.move  math.move  metadata.move  package.move  random.move  token.move
framework/kanari-framework/sources/crypto/: group_ops.move  hmac.move  zklogin_verified_id.move
framework/kanari-framework/sources/tests/: test_utils.move
framework/kanari-system/sources/: kanari_system.move  kanari_systemmove
framework/kari-system/: Move.toml
framework/kari-system/sources/: kari_system.move
framework/kari-system/tests/: kari-system_tests.move
framework/move-stdlib/: Move.toml
framework/move-stdlib/sources/: type_name.move
framework/src/: lib.rs
frameworks/: Cargo.toml
frameworks/ibc/: Move.toml
frameworks/kanari-framework/: .gitignore  Cargo.toml  Move.toml
frameworks/move-stdlib/: Cargo.toml
frameworks/move-stdlib/sources/: address.move  debug.move  string.move
frameworks/move-stdlib/src/: lib.rs
kari/: Cargo.toml
kari-explorer/: bun.lockb  package-lock.json  package.json
kari/src/: block.rs  blockchain.rs  blockchain_simulation.rs  config.rs  gas.rs  keytool.rs  main.rs  transaction.rs  wallet.rs
monaos/: README.md
monaos/anorama/: Cargo.toml
monaos/mona-enum-compat-util/: Cargo.toml
monaos/mona-ibc/: Cargo.toml
monaos/mona-ibc/src/: lib.rs
monaos/mona-storage/: Cargo.toml
monaos/mona-storage/src/: FileStorage.rs  file_storage.rs  lib.rs
monaos/mona-types/: Cargo.toml
monaos/mona-types/src/: address.rs  ascii.rs  balance.rs  bcs.rs  bit_vector.rs  coin.rs  debug.rs  error.rs  fixed_point32.rs  gas.rs  gas_coin.rs  hash.rs  kari.rs  lib.rs  object.rs  option.rs  signer.rs  string.rs  transfer.rs  tx_context.rs  type_name.rs  vector.rs
monaos/mona-types/src/kanari_framework/: hex.rs  mod.rs
monaos/mona-vm/: Cargo.toml
monaos/mona-vm/src/: lib.rs
monaos/x/: Cargo.toml
monaos/x/src/: main.rs
moveos/storage/: Cargo.toml
moveos/types/: Cargo.toml
node/: Cargo.toml
node/src/: lib.rs
p2p/: Cargo.toml
p2p/src/: lib.rs  main.rs
rpc/: Cargo.toml
src/: main.rs
web/kanari-web/: .gitignore  package-lock.json  package.json  tailwind.config.ts  testPunycode.ts
web/tool_mata/: bun.lockb  package.json
x/: Cargo.toml
x/src/: main.rs  rpc.rs
(+112 files in other folders)
