[package]
name = "framework"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
bcs.workspace = true
serde.workspace = true
once_cell.workspace = true 
tracing.workspace = true

mona-types.workspace = true

mona-enum-compat-util = { workspace = true, optional = true }
move-binary-format.workspace = true
move-core-types.workspace = true
move-bytecode-utils = { workspace = true, optional = true }
move-command-line-common = { workspace = true, optional = true }
move-vm-test-utils = { workspace = true, optional = true }
move-vm-types = { workspace = true, optional = true }
move-vm-profiler = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
bcs.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true