[package]
name = "consensus-pow"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
blake3 = "1.5.3"
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3"