[package]
name = "command"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
colored.workspace = true
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }


key.workspace = true
k2.workspace = true
kari-move.workspace = true



move-vm-test-utils = { workspace = true }
move-core-types = { workspace = true }
move-package = { workspace = true }
