[package]
name = "kari-move-analyzer"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
codespan-reporting.workspace = true
derivative.workspace = true
dunce.workspace = true
im.workspace = true
itertools.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
tempfile.workspace = true
url.workspace = true
vfs.workspace = true
clap.workspace = true
crossbeam.workspace = true
move-command-line-common.workspace = true
move-compiler.workspace = true
move-ir-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
