[package]
name = "kari-move"
edition = "2021"
version.workspace = true

[dependencies]
# Move dependencies
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-bytecode-source-map.workspace = true
move-bytecode-verifier-meter.workspace = true
move-cli.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-disassembler.workspace = true
move-package.workspace = true
move-unit-test.workspace = true
move-vm-config.workspace = true
move-vm-test-utils.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
move-vm-profiler.workspace = true
move-command-line-common.workspace = true
move-transactional-test-runner.workspace = true
move-ir-types.workspace = true
move-prover.workspace = true
move-stackless-bytecode.workspace = true
move-symbol-pool.workspace = true
# move-abstract-interpreter.workspace = true
move-abstract-stack.workspace = true
move-analyzer.workspace = true
