[package]
name = "node-kari"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
lazy_static = "1.5.0"
serde.workspace = true
tokio.workspace = true

consensus-pos.workspace = true
k2.workspace = true
kari-move.workspace = true

anyhow.workspace = true
colored.workspace = true
difference.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tempfile.workspace = true
walkdir.workspace = true
codespan-reporting.workspace = true
toml_edit.workspace = true

bcs.workspace = true

move-bytecode-verifier.workspace = true
move-disassembler.workspace = true
move-docgen.workspace = true
move-command-line-common.workspace = true
move-bytecode-utils.workspace = true
move-coverage.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-compiler.workspace = true
move-stdlib.workspace = true
move-stdlib-natives.workspace = true
move-vm-types.workspace = true
move-vm-runtime.workspace = true
move-vm-profiler.workspace = true
move-vm-test-utils.workspace = true
move-read-write-set-types.workspace = true
move-binary-format.workspace = true
move-package.workspace = true
move-prover.workspace = true
move-unit-test.workspace = true
move-errmapgen.workspace = true
move-bytecode-viewer.workspace = true