[package]
name = "kari-node"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
lazy_static.workspace = true
serde.workspace = true
tokio.workspace = true

consensus-pos.workspace = true
k2.workspace = true
kari-move.workspace = true

anyhow.workspace = true
colored.workspace = true
difference.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tempfile.workspace = true
walkdir.workspace = true
codespan-reporting.workspace = true
toml_edit.workspace = true

bcs.workspace = true

