[package]
name = "kari"
version.workspace = true
edition = "2021"

[dependencies]
digest.workspace = true
serde.workspace = true
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
bincode.workspace = true
jsonrpc-core.workspace = true
jsonrpc-http-server.workspace = true
futures.workspace = true
secp256k1.workspace = true
rand.workspace = true
bip39.workspace = true
colored.workspace = true
dirs.workspace = true
tokio.workspace = true
network.workspace = true
consensus-pos.workspace = true
p2p-protocol.workspace = true

key.workspace = true
k2.workspace = true 
command.workspace = true